fix: ajuste row-gap galeria itens

--- a/main.css
+++ b/main.css
@@ -412,7 +412,7 @@ footer p {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         column-gap: 1%;
-        row-gap: 1%;
+        /* row-gap: 1%; */
     }
 
     .galeria-arroba {
